fixed alignement

--- a/index.css
+++ b/index.css
@@ -7,3 +7,9 @@
 .emily{
   color: #ff0000;
 }
+.contact{
+  text-align: center;
+}
+.ticketplex{
+  padding: 500px;
+}
